# evals

./: README.md  pyproject.toml
notebooks/: 01_claude_mmlu.py  02_commonsense_qa.py
src/evals/: __init__.py  __main__.py  run.py
src/evals/models/: model.py
src/evals/models/claude3/: __init__.py
src/llm_evals_viz/: run.py  sweep.py
src/llm_evals_viz/benchmarks/: __init__.py  mmlu.py
src/llm_evals_viz/models/claude3/: __init__.py
