[tool.poetry]
name = "llm_evals_viz"
version = "0.0.1"
description = "Evaluations for LLM capabilities"
authors = ["Brendan Murphy <brendan@murphybrendan.com>"]
license = "MIT"
packages = [
    { include = "llm_evals_viz", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "*"
datasets = "*"
lm-eval = "*"
python-dotenv = "*"
torch = "*"
transformers = {extras = ["accelerate"], version = "*"}
wandb = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
